# project-euler

./: default.nix  project-euler.cabal  shell.nix
001/: Main.hs
002/: Main.hs
003/: Main.hs
004/: Main.hs
005/: Benchmark.hs  Main.hs  Solution.hs
006/: Main.hs
007/: Main.hs
008/: Main.hs
009/: Main.hs
010/: Main.hs
011/: Main.hs
012/: Main.hs
013/: Main.hs
014/: Main.hs
015/: Main.hs
016/: Main.hs
017/: Main.hs
018/: Main.hs
019/: Main.hs
020/: Main.hs
021/: Main.hs
022/: Main.hs
023/: Main.hs
024/: Main.hs
025/: Main.hs
026/: Main.hs
lib/: Digits.hs  Primes.hs  Stream.hs
