cabal-version: 2.4
name: project-euler
version: 0.1.0.0
author: Brad Parker
maintainer: hi@bradparker.com

library
  build-depends: base ^>=4.14.1.0
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Primes

common exe-base
  build-depends: base ^>=4.14.1.0
  default-language: Haskell2010

executable 001
  import: exe-base
  build-depends: containers
  hs-source-dirs: 001
  main-is: Main.hs

executable 002
  import: exe-base
  hs-source-dirs: 002
  main-is: Main.hs

executable 003
  import: exe-base
  build-depends: project-euler
  hs-source-dirs: 003
  main-is: Main.hs

executable 004
  import: exe-base
  hs-source-dirs: 004
  build-depends: mtl
  main-is: Main.hs

executable 005
  import: exe-base
  build-depends:
    project-euler,
    containers
  hs-source-dirs: 005
  main-is: Main.hs

executable 006
  import: exe-base
  hs-source-dirs: 006
  main-is: Main.hs

executable 007
  import: exe-base
  build-depends: project-euler
  hs-source-dirs: 007
  main-is: Main.hs

executable 008
  import: exe-base
  build-depends: comonad
  hs-source-dirs: 008
  main-is: Main.hs

executable 009
  import: exe-base
  hs-source-dirs: 009
  main-is: Main.hs
