cabal-version: 2.4
name: project-euler
version: 0.1.0.0
author: Brad Parker
maintainer: hi@bradparker.com

library
  build-depends:
    base ^>=4.14.1.0,
    containers,
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules:
    Primes
    Stream
    Digits

common exe-base
  build-depends: base ^>=4.14.1.0
  default-language: Haskell2010

executable 001
  import: exe-base
  build-depends: containers
  hs-source-dirs: 001
  main-is: Main.hs

executable 002
  import: exe-base
  hs-source-dirs: 002
  main-is: Main.hs

executable 003
  import: exe-base
  build-depends: project-euler
  hs-source-dirs: 003
  main-is: Main.hs

executable 004
  import: exe-base
  hs-source-dirs: 004
  build-depends:
    mtl,
    project-euler,
  main-is: Main.hs

executable 005
  import: exe-base
  build-depends:
    project-euler,
    containers,
  hs-source-dirs: 005
  main-is: Main.hs

executable 006
  import: exe-base
  hs-source-dirs: 006
  main-is: Main.hs

executable 007
  import: exe-base
  build-depends: project-euler
  hs-source-dirs: 007
  main-is: Main.hs

executable 008
  import: exe-base
  build-depends: comonad
  hs-source-dirs: 008
  main-is: Main.hs

executable 009
  import: exe-base
  hs-source-dirs: 009
  main-is: Main.hs

executable 010
  import: exe-base
  build-depends: project-euler
  hs-source-dirs: 010
  main-is: Main.hs

executable 011
  import: exe-base
  build-depends:
    comonad,
    vector,
  hs-source-dirs: 011
  main-is: Main.hs

executable 012
  import: exe-base
  build-depends:
    containers,
    mtl,
    project-euler,
  hs-source-dirs: 012
  main-is: Main.hs

executable 013
  import: exe-base
  build-depends:
    project-euler
  hs-source-dirs: 013
  main-is: Main.hs

executable 014
  import: exe-base
  build-depends:
    containers,
    mtl,
    recursion-schemes,
  hs-source-dirs: 014
  main-is: Main.hs

executable 016
  import: exe-base
  build-depends:
    project-euler
  hs-source-dirs: 016
  main-is: Main.hs

executable 017
  import: exe-base
  build-depends:
    containers
  hs-source-dirs: 017
  main-is: Main.hs

executable 018
  import: exe-base
  hs-source-dirs: 018
  main-is: Main.hs

executable 019
  import: exe-base
  build-depends:
    mtl
  hs-source-dirs: 019
  main-is: Main.hs

executable 020
  import: exe-base
  build-depends:
    project-euler
  hs-source-dirs: 020
  main-is: Main.hs

executable 021
  import: exe-base
  build-depends:
    project-euler,
  hs-source-dirs: 021
  main-is: Main.hs

executable 022
  import: exe-base
  hs-source-dirs: 022
  main-is: Main.hs

executable 023
  import: exe-base
  build-depends:
    project-euler
  hs-source-dirs: 023
  main-is: Main.hs

executable 024
  import: exe-base
  build-depends:
    mtl
  hs-source-dirs: 024
  main-is: Main.hs

executable 025
  import: exe-base
  build-depends:
    project-euler
  hs-source-dirs: 025
  main-is: Main.hs
